[package]
name = "wally"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
secp256k1 = {version = "0.20.3", features = ["rand"]}
tokio = "1.11.0"
web3 = "0.17.0"
fltk = { version = "^1.1", git = "https://github.com/fltk-rs/fltk-rs" }